# eviction-analysis

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: 2q_policy.hh  arc_policy.hh  benchmark_config.hh  bufpool.hh  eviction_policy.hh  fifo_policy.hh  heap.hh  list.hh  loader.hh  lru2_policy.hh  lru_policy.hh  random_policy.hh  recency.hh  recency_pool.hh  runner.hh  stats.hh  traces.hh
scripts/: Makefile  analyze_locality.cc  analyze_raw_trace.cc  convert_msr.cc  csv.hpp
src/: CMakeLists.txt  lruk_exp.cc  lruk_experiment.cc  main.cc
tests/: CMakeLists.txt  bufpool_test.cc  config_test.cc  runner_test.cc
